force-app/main/default/objects/Patient_Team__c/Patient_Team__c.object-meta.xml
<CustomObject>
    <label>Patient Team</label>
    <nameField>
        <displayFormat>PT-{0000000}</displayFormat>
        <label>Patient Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>