force-app/main/default/objects/Patient_Team__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Medical Engineer</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>